--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,7 @@ jobs:
           environment:
             STATE_ENV: staging
           command: |
-            ./$CIRCLE_WORKING_DIRECTORY/scripts/deploy_lambda
+            $CIRCLE_WORKING_DIRECTORY/scripts/deploy_lambda
 workflows:
   version: 2
   build:
@@ -34,3 +34,5 @@ workflows:
           filters:
             tags:
               only: /^rc-.*/
+            branches:
+              ignore: /.*/
