--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,9 @@ jobs:
           name: Deploy Lambdas
           environment:
             STATE_ENV: staging
+            AWS_DEFAULT_REGION: us-east-1
           command: |
+            apt-get insall zip
             $CIRCLE_WORKING_DIRECTORY/scripts/deploy_lambda
 workflows:
   version: 2
@@ -32,7 +34,5 @@ workflows:
     jobs:
       - stage:
           filters:
-            tags:
-              only: /^rc-.*/
             branches:
-              ignore: /.*/
+              only: master
