--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,10 +8,15 @@ defaults: &defaults
 deploysteps: &deploysteps
   steps:
     - checkout
-    - deploy:
-        name: Deploy
+    - build:
+        name:
         command: |
           $CIRCLE_WORKING_DIRECTORY/scripts/deploy_lambda
+    - deploy:
+        name:
+        command: |
+          terraform init $CIRCLE_WORKING_DIRECTORY/terraform
+          terraform apply -var 'aws_access_key=$AWS_ACCESS_KEY_ID' -var 'aws_secret_key=$AWS_SECRET_ACCESS_KEY' -var 'aws_region=$AWS_DEFAULT_REGION' $CIRCLE_WORKING_DIRECTORY/terraform
 
 jobs:
   test:
