--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,7 @@ deploysteps: &deploysteps
           cd $CIRCLE_WORKING_DIRECTORY
           terraform init $CIRCLE_WORKING_DIRECTORY/terraform
           terraform workspace select $STATE_ENV $CIRCLE_WORKING_DIRECTORY/terraform
-          terraform plan -var "aws_access_key=$AWS_ACCESS_KEY_ID" -var "aws_secret_key=$AWS_SECRET_ACCESS_KEY" -var "aws_region=$AWS_DEFAULT_REGION" $CIRCLE_WORKING_DIRECTORY/terraform
+          terraform apply -var "aws_access_key=$AWS_ACCESS_KEY_ID" -var "aws_secret_key=$AWS_SECRET_ACCESS_KEY" -var "aws_region=$AWS_DEFAULT_REGION" $CIRCLE_WORKING_DIRECTORY/terraform
 
 jobs:
   test:
