--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,10 +11,16 @@ jobs:
           name: Keyscan Github (HACK)
           command: ssh-keyscan github.com >> ~/.ssh/known_hosts
       - run:
+          name: virtual
+          command: |
+            sudo pip install virtualenv
+            virtualenv venv
+            source venv/bin/activate
+      - run:
           name: install dependencies
           command: |
-            sudo pip install -r requirements.txt
-            sudo pip install -r requirements-dev.txt
+            pip install -r requirements.txt
+            pip install -r requirements-dev.txt
       - run:
           name: test
           command: pytest
