--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,19 +8,16 @@ jobs:
     steps:
       - checkout
       - run:
-          name: Keyscan Github (HACK)
-          command: ssh-keyscan github.com >> ~/.ssh/known_hosts
+          name: install dig
+          command: sudo apt-get update && sudo apt-get install dnsutils
       - run:
-          name: virtual
-          command: |
-            sudo pip install virtualenv
-            virtualenv venv
-            source venv/bin/activate
+          name: Keyscan Github (HACK)
+          command: ssh-keyscan $(dig +short github.com | tail -1) >> ~/.ssh/known_hosts
       - run:
           name: install dependencies
           command: |
-            pip install -r requirements.txt
-            pip install -r requirements-dev.txt
+            pip install --user -r requirements.txt
+            pip install --user -r requirements-dev.txt
       - run:
           name: test
           command: pytest
@@ -33,8 +30,8 @@ jobs:
       - run:
           name: install dependencies
           command: |
-            sudo pip install -r requirements.txt
-            sudo pip install boto3
+            pip install --user -r requirements.txt
+            pip install --user boto3
       - deploy:
           name: Deploy to AWS
           command: python scripts/deploy.py
@@ -47,8 +44,8 @@ jobs:
       - run:
           name: install dependencies
           command: |
-            sudo pip install -r requirements.txt
-            sudo pip install boto3
+            pip install --user -r requirements.txt
+            pip install --user boto3
       - deploy:
           name: Deploy to AWS
           command: |
