--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,13 +28,15 @@ jobs:
     steps:
       - checkout
       - run:
-          name: install dependencies
+          name: Install terraform
           command: |
-            pip install --user -r requirements.txt
-            pip install --user boto3
+            wget https://releases.hashicorp.com/terraform/0.11.7/terraform_0.11.7_linux_amd64.zip -P /tmp -O terraform.zip
+            unzip /tmp/terraform.zip -d $CIRCLE_WORKING_DIRECTORY
       - deploy:
           name: Deploy to AWS
-          command: python scripts/deploy.py canary
+          command: |
+            terraform init $CIRCLE_WORKING_DIRECTORY
+            terraform apply -auto-approve -var version=canary -var "aws_access_key=$AWS_ACCESS_KEY_ID" -var "aws_secret_key=$AWS_SECRET_ACCESS_KEY" -var "aws_region=$AWS_DEFAULT_REGION"
   deploy-prod:
     working_directory: /tmp/project
     docker:
@@ -42,15 +44,15 @@ jobs:
     steps:
       - checkout
       - run:
-          name: install dependencies
+          name: Install terraform
           command: |
-            pip install --user -r requirements.txt
-            pip install --user boto3
+            wget https://releases.hashicorp.com/terraform/0.11.7/terraform_0.11.7_linux_amd64.zip -P /tmp -O terraform.zip
+            unzip /tmp/terraform.zip -d $CIRCLE_WORKING_DIRECTORY
       - deploy:
           name: Deploy to AWS
           command: |
-            python scripts/deploy.py v1
-            python scripts/publish.py
+            terraform init $CIRCLE_WORKING_DIRECTORY
+            terraform apply -auto-approve -var version=v1 -var "aws_access_key=$AWS_ACCESS_KEY_ID" -var "aws_secret_key=$AWS_SECRET_ACCESS_KEY" -var "aws_region=$AWS_DEFAULT_REGION"
 
 workflows:
   version: 2
