--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,58 +1,52 @@
 version: 2.0
 
+deploysteps: &deploysteps
+  working_directory: /tmp/project
+  docker:
+    - image: circleci/python:3.6
+  steps:
+    - checkout
+    - run:
+        name: Install terraform
+        command: |
+          mkdir $CIRCLE_WORKING_DIRECTORY/bin
+          wget https://releases.hashicorp.com/terraform/0.11.7/terraform_0.11.7_linux_amd64.zip -O /tmp/terraform.zip
+          unzip /tmp/terraform.zip -d $CIRCLE_WORKING_DIRECTORY/bin
+    - run:
+        name: Update function code
+        commmand: |
+          cd $CIRCLE_WORKING_DIRECTORY/terraform/common
+          $CIRCLE_WORKING_DIRECTORY/bin/terraform init
+          $CIRCLE_WORKING_DIRECTORY/bin/terraform apply -auto-approve -var "aws_access_key=$AWS_ACCESS_KEY_ID" -var "aws_secret_key=$AWS_SECRET_ACCESS_KEY" -var "aws_region=$AWS_DEFAULT_REGION" -var "aws_account_id=$AWS_ACCOUNT_ID"
+    - deploy:
+        name: deploy
+        command: |
+          cd $CIRCLE_WORKING_DIRECTORY/terraform/$DEPLOY_DIR
+          $CIRCLE_WORKING_DIRECTORY/bin/terraform init
+          $CIRCLE_WORKING_DIRECTORY/bin/terraform apply -auto-approve -var "aws_access_key=$AWS_ACCESS_KEY_ID" -var "aws_secret_key=$AWS_SECRET_ACCESS_KEY" -var "aws_region=$AWS_DEFAULT_REGION" -var "aws_account_id=$AWS_ACCOUNT_ID"
+
 jobs:
   test:
     working_directory: /tmp/project
     docker:
-      - image: circleci/python:3.6.1
+      - image: circleci/python:3.6
     steps:
       - checkout
       - run:
-          name: install dig
-          command: sudo apt-get update && sudo apt-get install dnsutils
-      - run:
-          name: Keyscan Github (HACK)
-          command: ssh-keyscan $(dig +short github.com | tail -1) >> ~/.ssh/known_hosts
-      - run:
           name: install dependencies
           command: |
-            pip install --user -r requirements.txt
             pip install --user -r requirements-dev.txt
       - run:
           name: test
           command: ~/.local/bin/pytest
   deploy-canary:
-    working_directory: /tmp/project
-    docker:
-      - image: circleci/python:3.6.1
-    steps:
-      - checkout
-      - run:
-          name: Install terraform
-          command: |
-            wget https://releases.hashicorp.com/terraform/0.11.7/terraform_0.11.7_linux_amd64.zip -O /tmp/terraform.zip
-            unzip /tmp/terraform.zip -d $CIRCLE_WORKING_DIRECTORY
-      - deploy:
-          name: Deploy to AWS
-          command: |
-            ./terraform init
-            ./terraform apply -auto-approve -var version=canary -var "aws_access_key=$AWS_ACCESS_KEY_ID" -var "aws_secret_key=$AWS_SECRET_ACCESS_KEY" -var "aws_region=$AWS_DEFAULT_REGION"
+    environment:
+      DEPLOY_DIR: development
+    <<: *deploysteps
   deploy-prod:
-    working_directory: /tmp/project
-    docker:
-      - image: circleci/python:3.6.1
-    steps:
-      - checkout
-      - run:
-          name: Install terraform
-          command: |
-            wget https://releases.hashicorp.com/terraform/0.11.7/terraform_0.11.7_linux_amd64.zip -O /tmp/terraform.zip
-            unzip /tmp/terraform.zip -d $CIRCLE_WORKING_DIRECTORY
-      - deploy:
-          name: Deploy to AWS
-          command: |
-            ./terraform init
-            ./terraform apply -auto-approve -var version=v1 -var "aws_access_key=$AWS_ACCESS_KEY_ID" -var "aws_secret_key=$AWS_SECRET_ACCESS_KEY" -var "aws_region=$AWS_DEFAULT_REGION"
+    environment:
+      DEPLOY_DIR: production
+    <<: *deploysteps
 
 workflows:
   version: 2
