changed production alais to "v1"; formatted development main.tf (#22)
* changed production alais to "v1"; formatted development main.tf

* hard code account id

* remove aws provider declaration and credentials from terraform modules

* default aws region

* move aws credentials into circle-ci environment variables

* add terminal success/fail states to workflow step functions
 - simplify reserved name comparisons
 - add assertion for each state in state machine

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,10 +29,10 @@ jobs:
           name: deploy
           command: |
             terraform init $CIRCLE_WORKING_DIRECTORY/terraform/common
-            terraform apply -auto-approve -var "aws_access_key=$AWS_ACCESS_KEY_ID" -var "aws_secret_key=$AWS_SECRET_ACCESS_KEY" -var "aws_region=$AWS_DEFAULT_REGION" -var "aws_account_id=$AWS_ACCOUNT_ID" $CIRCLE_WORKING_DIRECTORY/terraform/common
+            terraform apply -auto-approve $CIRCLE_WORKING_DIRECTORY/terraform/common
             rm -rf .terraform
             terraform init $CIRCLE_WORKING_DIRECTORY/terraform/development
-            terraform apply -auto-approve -var "aws_access_key=$AWS_ACCESS_KEY_ID" -var "aws_secret_key=$AWS_SECRET_ACCESS_KEY" -var "aws_region=$AWS_DEFAULT_REGION" -var "aws_account_id=$AWS_ACCOUNT_ID" $CIRCLE_WORKING_DIRECTORY/terraform/development
+            terraform apply -auto-approve $CIRCLE_WORKING_DIRECTORY/terraform/development
   deploy-prod:
     working_directory: /tmp/project
     docker:
@@ -48,10 +48,10 @@ jobs:
           name: deploy
           command: |
             terraform init $CIRCLE_WORKING_DIRECTORY/terraform/common
-            terraform apply -auto-approve -var "aws_access_key=$AWS_ACCESS_KEY_ID" -var "aws_secret_key=$AWS_SECRET_ACCESS_KEY" -var "aws_region=$AWS_DEFAULT_REGION" -var "aws_account_id=$AWS_ACCOUNT_ID" $CIRCLE_WORKING_DIRECTORY/terraform/common
+            terraform apply -auto-approve $CIRCLE_WORKING_DIRECTORY/terraform/common
             rm -rf .terraform
             terraform init $CIRCLE_WORKING_DIRECTORY/terraform/production
-            terraform apply -auto-approve -var "aws_access_key=$AWS_ACCESS_KEY_ID" -var "aws_secret_key=$AWS_SECRET_ACCESS_KEY" -var "aws_region=$AWS_DEFAULT_REGION" -var "aws_account_id=$AWS_ACCOUNT_ID" $CIRCLE_WORKING_DIRECTORY/terraform/production
+            terraform apply -auto-approve $CIRCLE_WORKING_DIRECTORY/terraform/production
 
 workflows:
   version: 2
